msfwk-testsql/ms-payments-package/ms-payments-package-docker/src/docker/k8/on-premise/samples/external/payments-ingress.yaml
#
# *******************************************************************************
# * Copyright © Temenos Headquarters SA 2021. All rights reserved.
# *******************************************************************************
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paymentsorder-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: paymentsorderapi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payments-order-api-svc-np
            port:
              number: 8080
